phone1: overlay: Don't pin launcher app in memory
Similar to what we did for the camera app, unpin the launcher app from
memory as well. While the default launcher (Launcher3) isn't
particularly big, it doesn't make much sense to pin because the launcher
does not typically load new resources much. Most of its resources should
already be loaded in memory after it starts, so pinning the APK is
redundant.

NB: The value has been changed to false instead of removing it entirely
because we need to override the config set by overlays in the prebuilt
vendor image.

Change-Id: I6b82f2facb1bf4aee393af3f0bc3e0bce2538222
Signed-off-by: aswin7469 <aswinas@pixysos.com>
Signed-off-by: wHo-EM-i <ehteshammalik18998@gmail.com>
Signed-off-by: xenxynon <flynryder427@gmail.com>

--- a/overlay/Phone1FrameworksAOSPA/res/values/config.xml
+++ b/overlay/Phone1FrameworksAOSPA/res/values/config.xml
@@ -25,4 +25,7 @@
     <!-- Display color inversion availability -->
     <bool name="config_displayInversionAvailable">false</bool>
 
+    <!-- True if home app should be pinned via Pinner Service -->
+    <bool name="config_pinnerHomeApp">false</bool>
+
 </resources>
