--- a/overlay/Phone1FrameworksAOSPA/res/values/config.xml
+++ b/overlay/Phone1FrameworksAOSPA/res/values/config.xml
@@ -28,4 +28,6 @@
     <!-- True if home app should be pinned via Pinner Service -->
     <bool name="config_pinnerHomeApp">false</bool>
 
+    <!-- True if camera app should be pinned via Pinner Service -->
+    <bool name="config_pinnerCameraApp">false</bool>
 </resources>
