--- a/overlay/Phone1SystemUI/res/values/config.xml
+++ b/overlay/Phone1SystemUI/res/values/config.xml
@@ -17,8 +17,10 @@
 <resources>
 
     <!-- Margin on the bottom of the charging indicator on Keyguard -->
-    <dimen name="keyguard_indication_margin_bottom">15dp</dimen>
+    <dimen name="keyguard_indication_margin_bottom">320px</dimen>
 
+   <!-- Maximum number of notification icons shown on the lockscreen (excluding overflow dot) -->
+    <integer name="max_notif_icons_on_lockscreen">5</integer>
     <!-- Location on the screen of the center of the physical power button. -->
     <dimen name="physical_power_button_center_screen_location_y">989.0px</dimen>
 
