--- a/overlay/Phone1SystemUI/res/values/config.xml
+++ b/overlay/Phone1SystemUI/res/values/config.xml
@@ -27,6 +27,6 @@
 
     <!-- Should we vibrate on an icon animation of the shelf. This should only be active if the
     vibrator is capable of subtle vibrations -->
-    <bool name="config_vibrateOnIconAnimation">true</bool>
+    <bool name="config_vibrateOnIconAnimation">false</bool>
 
 </resources>
